dev/tests/cases/neg/07_out_of_range.tv
df main() -> void {
    set b: i8 = 200;
}
